# UkrNet

./: CMakeLists.txt  net2.cxx
include/: Activation.h  BinaryCrossEntropy.h  CrossEntropy.h  Dense.h  Layer.h  MeanSquareError.h  Sigmoid.h  Softmax.h
